name:              hpayTools
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable hpayctl
  main-is:         ClientMain.hs
  hs-source-dirs:  src
  GHC-Options:     -Wall -threaded -rtsopts -O2
  build-depends:   base,
                    extra,
                    random,
                    bytestring,
                    binary,
                    text,
                    transformers,
                    containers,
                    parsec,
                    stm,
                    hslogger,
                    io-streams,
                    binary-streams,
                    network,
                    network-simple,
                    network-socket-options,
                    deepseq,
                    unordered-containers,
                    async,
                    cmdargs,
                    template-haskell,
                    file-embed,
                    zip-archive

executable hpayd
  main-is:         ServerMain.hs
  hs-source-dirs:  src
  GHC-Options:     -Wall -threaded -rtsopts -O2
  build-depends:   base,
                    extra,
                    bytestring,
                    binary,
                    text,
                    transformers,
                    containers,
                    parsec,
                    stm,
                    hslogger,
                    io-streams,
                    binary-streams,
                    network,
                    network-simple,
                    network-socket-options,
                    deepseq,
                    unordered-containers,
                    async,
                    template-haskell,
                    file-embed,
                    zip-archive
